src/styles/style.css
body{
    font-family: 'Roboto', sans-serif;
    background: rgb(251, 240, 201);
    border: 20px solid rgb(37, 101, 123);
    border-radius: 10px;
    padding: 5%
}

.header {
    overflow: hidden;
    background-color: rgb(159, 198, 187);
    padding: 10px;
}

.header a {
    float: none;
    display: block;
    text-align: left;
    color: rgb(14, 33, 67);
    padding: 12px;
    text-decoration: none;
    font-size: 150%; 
    /* line-height: 25px; */
}
  
.header-center {
    float: none;
}

.header a img {
    height: 80px;
}

.nav-items:hover {
    background-color: rgb(255, 255, 227);
    color: rgb(21, 42, 89);
}

a {
    background-color: none;
    color: rgb(21, 42, 89);
}

h1 {
    font-size: 250%;
    color:rgb(21, 42, 89);
}

h2 {
    font-size: 200%;
    color:rgb(21, 42, 89);
}

h3 {
    font-size: 150%;
    color:rgb(21, 42, 89);
}

p {
    font-size: 100%;
    color:rgb(14, 33, 67);
}

.avatar {
    border-radius: 40%;
    display: flex;
    position: relative;
    max-width: 100%;
    height: auto;
}

.me {
    border-radius: 80%;
    display: flex;
    position:relative;
    max-width: 100%;
    height: auto;
}

.igsnippet {
    display: flex;
    position:relative;
    max-width: 100%;
    height: auto;
}

#mapdiv {
    display: flex;
    position:relative;
    max-width: 100%;
    height: auto;
}

.post {
    margin-top: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

form {
    display: block;
    text-align: left;
    margin-top: 0em;
    color:rgb(14, 33, 67);
    width: 100%;
}

form section input {
    width: 100%;
}

form section textarea {
    width: 100%;
}

.submission {
    width: 50%;
}

.back-to-top {
    position: fixed;
    right: 5rem;
    bottom: 4rem;
    width: 3em;
}

.back-to-top-link {
    display: inline-block;
    text-decoration: none;
    /* width: 5%;
    height: 5%; */
    padding: 10%;
}

/* footer {
    display: flex;
    justify-content: flex-start;
} */

.footer-row {
    display: flex;
    justify-content: flex-start;
}

.footer-icons {
    padding-right: 10px;
    /* max-width: 33%; */
    height: auto;
}

.footer-copy {
    text-align: center;
    width: 100%;
}

@media screen and (min-width: 800px) {
    .header a {
        float: left;
        text-align: center;
        display: inline;
    }
    .header-center {
        justify-content: center;
    }
    .nav-items {
        border:royalblue;
    }

    form {
        width: 50%;
    }
    h1 {
        font-size: 300%;
        color:rgb(21, 42, 89);
    }
    
    h2 {
        font-size: 250%;
        color:rgb(21, 42, 89);
    }
    
    h3 {
        font-size: 200%;
        color:rgb(21, 42, 89);
    }
    
    p {
        font-size: 150%;
        color:rgb(14, 33, 67);
    }
}

